--- a/docs/views/install/check-it-works.html
+++ b/docs/views/install/check-it-works.html
@@ -23,13 +23,13 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 8 of 8</span>
+        <span class="nhsuk-caption-l">Step 8 of 8</span>
         Check it works
       </h1>
 
       <h2 class="nhsuk-u-visually-hidden">Check your local host</h2>
       
-      <p class="nhsuk-lede-text">In your web browser, visit <a href="http://localhost:3000" target="_blank">http://localhost:3000 <span class="nhsuk-u-visually-hidden">opens in a new tab</span></a></p>
+      <p class="nhsuk-lede-text">In your web browser, visit <a href="http://localhost:3000" target="_blank" rel="noopener">http://localhost:3000 <span class="nhsuk-u-visually-hidden">opens in a new tab</span></a></p>
 
       <p>You should see the prototype welcome page.</p>
 
