--- a/docs/views/install/open.html
+++ b/docs/views/install/open.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 5 of 8</span>
+        <span class="nhsuk-caption-l">Step 5 of 8</span>
         Go to your prototype
       </h1>
 
