--- a/docs/views/install/run.html
+++ b/docs/views/install/run.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 7 of 8</span>
+        <span class="nhsuk-caption-l">Step 7 of 8</span>
         Run the kit
       </h1>
 
