--- a/docs/views/install/setup.html
+++ b/docs/views/install/setup.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 6 of 8</span>
+        <span class="nhsuk-caption-l">Step 6 of 8</span>
         Setup the kit
       </h1>
       
