--- a/docs/views/install/terminal.html
+++ b/docs/views/install/terminal.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 1 of 8</span>
+        <span class="nhsuk-caption-l">Step 1 of 8</span>
         {% block branchingHeader %}Terminal{% endblock %}
       </h1>
 
