--- a/docs/views/install/text-editor.html
+++ b/docs/views/install/text-editor.html
@@ -23,17 +23,17 @@
     <div class="nhsuk-grid-column-two-thirds">
 
       <h1>
-        <span class="nhsuk-caption-m">Step 3 of 8</span>
+        <span class="nhsuk-caption-l">Step 3 of 8</span>
         HTML text editor
       </h1>
 
-      <p class="nhsuk-lede-text">You’ll need a HTML text editor to edit and make changes to your prototype.</p>
+      <p class="nhsuk-lede-text">You'll need an HTML text editor to edit and make changes to your prototype.</p>
       
-      <p>Any HTML text editor will do, but we recommend Atom - which is free and has lots of useful features.</p>
+      <p>Any HTML text editor will do, but we recommend Visual Studio Code which is free and has lots of useful features.</p>
 
-      <p><a href="https://atom.io/" target="_blank">Download Atom (opens in new window)</a></p>
+      <p><a href="https://code.visualstudio.com/Download" target="_blank" rel="noopener">Download Visual Studio Code (opens in new window)</a></p>
 
-      <p>Once you have a HTML text editor installed, return to this guide.</p>
+      <p>Once you have an HTML text editor installed, return to this guide.</p>
 
       {% block pagination %}
       {% endblock %}
