--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
@@ -21,11 +21,12 @@
         </a>
     </p>
 
-    <h2 class="nhsuk-heading-m">Pay in instalments</h2>
+    <h2 class="nhsuk-heading-m">If you cannot pay your Penalty Charge Notice (PCN) in full</h2>
 
-    <p>If you want to pay in instalments, you can make regular payments using a payment plan similar to Direct Debit.</p>
-    <p>You'll need to make the first payment within 28 days (by 17 July 2024).</p>
-
+    <p>If you cannot pay your PCN in one single payment, you can spread the amount over multiple payments.</p>
+    <p>You'll need to make the first payment within 28 days (by 17 July 2024) and remember to make regular monthly payments until you have paid the PCN in full.</p>
+    <p>If you wanted to make payments using the plan you tried to set up by Direct Debit, these are shown in the payment plan summary.</p>
+    
     <h3 class="nhsuk-heading-s">The payment plan summary:</h3>
 
     <dl class="nhsuk-summary-list">
@@ -66,16 +67,24 @@
         </div>
     </dl>
 
+    <p><a href="#">Print this page</a></p>
+
     <div class="nhsuk-inset-text">
         <span class="nhsuk-u-visually-hidden">Information: </span>
         <p>It is important that you remember to make regular monthly payments. If you do not, you may have to pay a surcharge of up to £50.</p>
     </div>
+
+    <h2 class="nhsuk-heading-m">How to make your monthly payments</h2>
     
-    <p>You can make a payment online using a debit or credit card. You can also make payments over the phone.</p>
+    <p>You can use this online service to make a payment using a debit or credit card. You'll need to log in each month using the same PCN reference number you used today. You can then select the amount you want to pay.</p>
+    <p>You can also make payments over the phone.</p>
     <p><strong>Telephone:</strong> 0300 330 9291</p>
+
+    <p>You will need to keep a record of your PCN reference number to make a payment.</p>
+
     <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and other ways to contact us on our website</a>.</p>
-    <br>
-    <form action="/v6-pcn/kickout/cannot-set-up-dd-manual-payment" method="post">
+    
+    <!-- <form action="/v6-pcn/kickout/cannot-set-up-dd-manual-payment" method="post">
         <div class="nhsuk-form-group nhsuk-u-margin-bottom-0">
             <div class="nhsuk-checkboxes">
                 <div class="nhsuk-checkboxes__item">
@@ -90,9 +99,11 @@
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
             Pay in instalments
         </button>
-    </form>
+    </form> -->
+    <p>
+        <a href="#" class="nhsuk-button nhsuk-u-margin-bottom-0" role="button">Make a payment online now</a>
+    </p>
 
-    <p><a href="#">Print this page</a></p>
     <p><a href="/v6-pcn/penalty-charge-notice-details">Cancel</a></p>
     
   </div>
