--- a/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
+++ b/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
@@ -21,11 +21,6 @@
         <p>Change your details if any of them are incorrect by selecting change.</p>
         <p>Once you have done this, you'll be brought back to this page.</p>
 
-        <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>Select try again after you have updated your details.</p>
-        </div>
-
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
 				<dt class="nhsuk-summary-list__key">
@@ -65,8 +60,13 @@
             </div>
 		</dl>
 
+		<div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p>After you have updated your details, select continue so we can check them again.</p>
+        </div>
+
         <a href="#" class="nhsuk-button" role="button">
-            Try again
+            Continue
         </a>
 
         <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
