--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT.html
@@ -9,30 +9,25 @@
         <div class="nhsuk-grid-column-two-thirds">
             <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
             <h1 class="nhsuk-heading-l">
-      We cannot set up your Direct Debit
-    </h1>
+                We cannot set up your Direct Debit
+            </h1>
 
-            <p>We've been unable to verify your details. You will not be able to pay by Direct Debit.</p>
+            <p>We've been unable to verify your details. You'll not be able to pay by Direct Debit.</p>
 
             <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
 
-            <h2 class="nhsuk-heading-m">What to do next</h2>
+            <h2 class="nhsuk-heading-m">Other ways to pay your Penalty Charge Notice (PCN)</h2>
 
-            <p>You can now either:</p>
+            <p>You can use this service to make a payment using a debit or credit card. You can either:</p>
 
-            <ul>
-                <li>Pay in full today</li>
-                <li>Pay in instalments over twelve months</li>
+            <ul class="nhsuk-u-margin-bottom-8">
+                <li>pay the full amount in one payment</li>
+                <li>split the amount over several payments</li>
             </ul>
-
-            <p>You can make either payment online using a debit or credit card.</p>
-
-            <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
 
             <!-- TABS -->
 
             <div class="nhsuk-tabs" data-module="nhsuk-tabs">
-                <h2 class="nhsuk-tabs__title nhsuk-u-visually-hidden">Ways to pay</h2>
 
                 <ul class="nhsuk-tabs__list">
 
@@ -41,7 +36,7 @@
                     </li>
 
                     <li class="nhsuk-tabs__list-item">
-                        <a class="nhsuk-tabs__tab" href="#pay-in-instalments">Pay in instalments</a>
+                        <a class="nhsuk-tabs__tab" href="#pay-in-instalments">Split payments over several payments</a>
                     </li>
 
                 </ul>
@@ -49,8 +44,40 @@
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="pay-in-full">
 
                     <!-- CONTENT FOR PAY IN FULL -->
-                    <h3 class="nhsuk-heading-m">Pay in full</h3>
-                    <p>You have £50 left to pay. You can make this payment now.</p>
+
+                    <h3 class="nhsuk-heading-m">
+                        Penalty Charge Notice amount
+                    </h3>
+
+                    <dl class="nhsuk-summary-list nhsuk-summary-list">
+                        <div class="nhsuk-summary-list__row">
+                            <dt class="nhsuk-summary-list__key">
+                                Total amount
+                            </dt>
+                            <dd class="nhsuk-summary-list__value">
+                                £57.90
+                            </dd>
+                        </div>
+                    </dl>
+
+                    <h3 class="nhsuk-heading-m">
+                        Previous payments
+                    </h3>
+                    
+                    <dl class="nhsuk-summary-list nhsuk-summary-list">           
+                        <div class="nhsuk-summary-list__row">
+                            <dt class="nhsuk-summary-list__key">
+                                Payments made
+                            </dt>
+                            <dd class="nhsuk-summary-list__value">
+                                £7.90
+                            </dd>
+                        </div>
+                    </dl>
+
+                    <p class="nhsuk-heading-l nhsuk-u-margin-bottom-6">
+                        Amount still to pay: £50
+                    </p>
 
                     {{ button({
                         classes: 'nhsuk-u-margin-bottom-0',
@@ -63,19 +90,22 @@
                 <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="pay-in-instalments">
 
                     <!-- CONTENT FOR PAY IN INSTALMENTS -->
-                    <h3 class="nhsuk-heading-m">Pay in instalments</h3>
-
-                    <p>If you want to pay in instalments, you can make regular partial payments using this service.</p>
-                    <p>These will not be automatic and you are responsible for keeping up the payments.</p>
-                    <p>If you fail to make any payment, or if you do not keep up payments, an extra £50 surcharge will be added to your total.</p>
-                    <p>Payments can be as small or as large as you like. But you will need to make the first payment within 28 days (by {{ 28 | alterTodaysDateByNumberOfDays }}).</p>
+                
+                    <p>If you want spread the cost of your PCN over several payments, you can make regular partial payments using this service.</p>
+                    <p>You'll need to make the first payment within 28 days (by 17 July 2024) and make regular monthly payments until you have paid the PCN in full.</p>
+                    <p>These will not be taken automatically and you are responsible for keeping up the payments.</p>
+                    <p>It is important that you remember to to make regular monthly payments. If you do not, we may start debt recovery proceedings.</p>
 
                      {{ button({
-                        classes: 'nhsuk-u-margin-bottom-0',
-                        text: 'Pay my first instalment',
+                        classes: 'nhsuk-u-margin-bottom-6',
+                        text: 'Make a partial payment',
                         href: '../partial-payment-ALT'
                     }) }}
-
+                    
+                    <p>You can also make payments over the phone.</p>
+                    <p><strong>Telephone:</strong> 0300 330 9291</p>
+                    <p>You will need to keep a record of your PCN reference number to make a payment.</p>
+                    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website.</a></p>
                 </div>
 
             </div>
