adhoc updated / manual payment option 3 screens added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -466,50 +466,32 @@ TECS - Adhoc
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">
-                                Cannot set up Direct Debit v2 - Option 1<br>
+                                Cannot set up Direct Debit v2<br>
                                 <div class="nhsuk-hint" id="contact-hint">
-                                   (Built for UR in Oct/Nov 2024 - manual payment plan)
+                                   (Built for UR starting in Oct/Nov 2024 - manual payment plan)
                                 </div>
                             </td>
                             <td class="nhsuk-table__cell">
-                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-direct-debit-v2">Cannot set up DD v2 - Option 1</a>
+                                <!-- <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-direct-debit-v2">Cannot set up DD v2 - Option 1</a>
                                 <br><br>
                                 <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-direct-debit-instalments">Instalments - Option 1</a>
                                 <br><br>
                                 <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-direct-debit-instalments-surcharge">Instalments (Surcharge) - Option 1</a>
+                                <br><br>
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment">Cannot set up DD v2 - Option 2</a>
+                                <br><br>
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment-surcharge">Cannot set up DD v2 - Option 2 (Surcharge)</a>
+                            -->
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT">Cannot set up DD v2 - Option 3a</a>
+                                <br><br>
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT-b">Cannot set up DD v2 - Option 3b</a>
+                           
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">
-                                Cannot set up Direct Debit v2 - Option 2<br>
-                                <div class="nhsuk-hint" id="contact-hint">
-                                    (Built for UR in Oct/Nov 2024 - manual payment plan)
-                                 </div>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment">
-                                    Cannot set up DD v2 - Option 2
-                                </a>
-                            </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                        </tr>
 
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">
-                                Cannot set up Direct Debit v2 - Option 2 (Surcharge) <br>
-                                <div class="nhsuk-hint" id="contact-hint">
-                                    (Built for UR in Oct/Nov 2024 - manual payment plan)
-                                 </div>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/kickout/cannot-set-up-dd-manual-payment-surcharge">
-                                    Cannot set up DD v2 - Option 2 (Surcharge)
-                                </a>
-                            </td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                        </tr>
+
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Payment not authorised</td>
