DECS version of experimental check personal details page

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1253,7 +1253,11 @@ TECS - Adhoc
                                 <p class="nhsuk-hint">This version is the same as the existing screen except this version uses an inset text component with the hyposthesis being this will draw more attention to some of the information on screen.</p>
                             </td>
 
-                            <td class="nhsuk-table__cell"><a class="nhsuk-link--no-visited-state" href="v5-enquiry/experimental/check-personal-details">Check your personal details</a></td>
+                            <td class="nhsuk-table__cell">
+                                <a class="nhsuk-link--no-visited-state" href="v5-enquiry/experimental/check-personal-details">Check your personal details</a>
+                                <br><br>
+                                <a class="nhsuk-link--no-visited-state" href="v5-enquiry/experimental/check-personal-details-decs">Check your personal details (DECS)</a>
+                            </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
