--- a/app/views/v5-enquiry/experimental/check-personal-details-decs.html
+++ b/app/views/v5-enquiry/experimental/check-personal-details-decs.html
@@ -30,8 +30,8 @@ Check your personal details
 
 		<div class="nhsuk-inset-text">
 			<span class="nhsuk-u-visually-hidden">Information: </span>
-			<p>We took these details from your prescription.</p>
-			<p>They should match what was shown on your exemption or prepayment certificate, or on your benefit award.</p>
+			<p>We took these details from your dental treatment form.</p>
+			<p>They should match what was shown on your exemption certificate or benefit award.</p>
 		</div>
 		
       	<dl class="nhsuk-summary-list">
