Content fixes / error message page fix for could not verify

--- a/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
+++ b/app/views/v6-pcn/experimental/we-could-not-verify-your-details.html
@@ -19,7 +19,7 @@
         <h1 class="nhsuk-heading-xl">We could not verify your details</h1>    
 
         <p>Change your details if any of them are incorrect by selecting change.</p>
-        <p>Once you have done this, you'll be brought back to this page.</p>
+        <p>Once you've done this, you'll be brought back to this page.</p>
 
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
@@ -62,7 +62,7 @@
 
 		<div class="nhsuk-inset-text">
             <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>After you have updated your details, select continue so we can check them again.</p>
+            <p>After you've updated your details, select continue so we can check them again.</p>
         </div>
 
         <a href="#" class="nhsuk-button" role="button">
