--- a/app/views/v6-pcn/error-messages/could-not-verify-details.html
+++ b/app/views/v6-pcn/error-messages/could-not-verify-details.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-    We could not verify extra details
+	We could not verify your details
 {% endblock %}
 
 {% block outerContent %}
@@ -13,97 +13,86 @@
 {% block content %}
 
 <div class="nhsuk-grid-row">
-  <div class="nhsuk-grid-column-two-thirds">
+	<div class="nhsuk-grid-column-two-thirds">
 
-    <div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
-      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
-        There is a problem
-      </h2>
-      <div class="nhsuk-error-summary__body">
-  
-        <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
-          <li>
-            <a href="#contact-error">Update your address or bank details before trying again</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+		<div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+			<h2 class="nhsuk-error-summary__title" id="error-summary-title">
+				There is a problem
+			</h2>
+			<div class="nhsuk-error-summary__body">
+				<ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+					<li>
+						<a href="#contact-error">Update your address or bank details before continuing</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 
         <span class="nhsuk-caption-l">Pay an NHS Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">We could not verify your details</h1>    
-
+        
         <p>Change your details if any of them are incorrect by selecting change.</p>
-        <p>Once you have done this, you'll be brought back to this page.</p>
-        <p>Select try again after you have updated your details.</p>
+        <p>Once you've done this, you'll be brought back to this page.</p>
 
 
-<div class="nhsuk-form-group nhsuk-form-group--error">
-  <span class="nhsuk-error-message" id="contact-error">
-    <span class="nhsuk-u-visually-hidden">Error:</span> Update your address or bank details before trying again
-  </span>
-        <dl class="nhsuk-summary-list">
+		<div class="nhsuk-form-group nhsuk-form-group--error">
+			<span class="nhsuk-error-message" id="contact-error">
+				<span class="nhsuk-u-visually-hidden">Error:</span> Update your address or bank details before continuing
+			</span>
+			
+			<dl class="nhsuk-summary-list">
+				<div class="nhsuk-summary-list__row">
+					<dt class="nhsuk-summary-list__key">
+						{{ data['address-change-one'] | default('12 Old Oak Road') }} <br> 
+						{{ data['address-change-town'] | default('Throckley') | capitalize }} <br>
+						{{ data['address-change-postcode'] | default('NE67 9AD') | upper }}
+					</dt>
+	
+					<dd class="nhsuk-summary-list__value">
+					</dd>
+			  
+					<dd class="nhsuk-summary-list__actions">
+						<a href="/v6-pcn/what-is-your-address-dd">
+							Change<span class="nhsuk-u-visually-hidden"> address</span>
+						</a>
+					</dd>
+				</div>
+			  
+				<div class="nhsuk-summary-list__row">
+					<dt class="nhsuk-summary-list__key">
+						Bank Account <br>
+						{{ data['account-number-change'] | default('1234567891') }} <br>
+						Sort Code <br>
+						{{ data['account-sort-one-change'] | default('12') }}-{{ data['account-sort-two-change'] | default('34') }}-{{ data['account-sort-three-change'] | default('56') }} <br>
+						{{ data['account-name-change'] | default('Michelle Doe') }}
+					</dt>
+					<dd class="nhsuk-summary-list__value">
+					</dd>
+				
+					<dd class="nhsuk-summary-list__actions">
+						<a href="/v6-pcn/enter-bank-details">
+							Change<span class="nhsuk-u-visually-hidden"> bank details</span>
+						</a>
+					</dd>
+				</div>
+			</dl>
+		</div>
 
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                11 Street <br> ELY <br> Newcastle <br>NEX 421
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                </dd>
-          
-              <dd class="nhsuk-summary-list__actions">
-          
-                <a href="/v6-pcn/what-is-your-address-dd">
-                  Change<span class="nhsuk-u-visually-hidden"> address</span>
-                </a>
-          
-              </dd>
-          
-            </div>
-          
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                Bank Account <br> 43215432 <br> Sort Code <br> 40-23-22 <br> Stephens
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                
-              </dd>
-          
-              <dd class="nhsuk-summary-list__actions">
-          
-                <a href="/v6-pcn/enter-bank-details">
-                  Change<span class="nhsuk-u-visually-hidden"> bank details</span>
-                </a>
-          
-              </dd>
-          
-            </div>
-          </div>
-         
-          
-          
-            
-          
-              
-          
-            
-          
-            
-          
-          </dl>
-
-    
+		<div class="nhsuk-inset-text">
+			<span class="nhsuk-u-visually-hidden">Information: </span>
+			<p>After you've updated your details, select continue so we can check them again.</p>
+		</div>
 
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-            Try again
+            Continue
         </button>
 
         <p>If your details are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> about your Penalty Charge Notice. You may not be able to pay by Direct Debit. </p>
 
-        
-
         <p>
             <a href="#">Cancel</a>
-       </div>
+		</p>
+	</div>
 </div>
 
 {% endblock %}
