Experiemental dd confirmed page (content changes)

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1373,6 +1373,22 @@ TECS - Adhoc
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Direct Debit confirmed
+                                <br><br>
+                                <p class="nhsuk-hint">This version has a variation on the content on the page to try and see if messaging around being able to close the screen at this stage is reassuring and helpful to our users.</p>
+                            
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <a class="nhsuk-link--no-visited-state" href="v6-pcn/experimental/direct-debit-confirmed">Direct Debit confirmed</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Apple Pay (Full payment)
                                 <br><br>
                                 <p class="nhsuk-hint">An example of how the Gov pay screens would look if we are able to offer Apple Pay as a payment option.</p>
