New UR journey error messaging added - WIP

--- a/app/views/user-research-feb-2025/date-of-birth.html
+++ b/app/views/user-research-feb-2025/date-of-birth.html
@@ -12,10 +12,26 @@
 {% block content %}
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">		
+
+		{% if formError %}
+		<div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+			<h2 class="nhsuk-error-summary__title" id="error-summary-title">
+				There is a problem
+			</h2>
+			<div class="nhsuk-error-summary__body">
+				<ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+					<li>
+						<a href="#day">Enter your date of birth</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		{% endif %}
+
 		<span class="nhsuk-caption-m">Your details</span>
 
 		<form action="date-of-birth" method="post" class="form">
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 
 				<fieldset class="nhsuk-fieldset" aria-describedby="dob-hint" role="group">
 					<legend class="nhsuk-fieldset__legend nhsuk-label--l">
@@ -27,6 +43,12 @@
 					<div class="nhsuk-hint" id="dob-hint">
 						For example, 31 3 1980
 					</div>
+
+					{% if formError %}
+					<span class="nhsuk-error-message" id="reference-error">
+						<span class="nhsuk-u-visually-hidden">Error:</span> Enter your date of birth
+					</span>
+					{% endif %}
 			  
 					<div class="nhsuk-date-input" id="dob">
 						<div class="nhsuk-date-input__item">
@@ -34,7 +56,7 @@
 								<label class="nhsuk-label nhsuk-date-input__label" for="day">
 									Day
 								</label>
-								<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" inputmode="numeric">
+								<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2 {% if formError %} nhsuk-input--error {% endif %}" id="day" name="day" type="text" inputmode="numeric">
 							</div>
 						</div>
 
@@ -43,7 +65,7 @@
 								<label class="nhsuk-label nhsuk-date-input__label" for="month">
 									Month
 								</label>
-								<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" inputmode="numeric">
+								<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2 {% if formError %} nhsuk-input--error {% endif %}" id="month" name="month" type="text" inputmode="numeric">
 							</div>
 						</div>
 
@@ -52,7 +74,7 @@
 							<label class="nhsuk-label nhsuk-date-input__label" for="year">
 								Year
 							</label>
-							<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" inputmode="numeric">
+							<input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4 {% if formError %} nhsuk-input--error {% endif %}" id="year" name="year" type="text" inputmode="numeric">
 							</div>
 						</div>
 					</div>
