--- a/app/views/user-research-feb-2025/enter-reference-number-again.html
+++ b/app/views/user-research-feb-2025/enter-reference-number-again.html
@@ -13,17 +13,39 @@
 
 <div class="nhsuk-grid-row">
 	<div class="nhsuk-grid-column-two-thirds">
+		{% if formError %}
+		<div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+			<h2 class="nhsuk-error-summary__title" id="error-summary-title">
+				There is a problem
+			</h2>
+			<div class="nhsuk-error-summary__body">
+				<ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+					<li>
+						<a href="#reference-confirm">Enter your reference number</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		{% endif %}
+
 		<span class="nhsuk-caption-m">Your details</span>
 		<h1 class="nhsuk-heading-l">Enter your reference number again</h1>
 
 		<form action="enter-reference-number-again" method="post">
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 				<label class="nhsuk-label" for="reference-confirm">
 					<div class="nhsuk-hint">
 						We ask this to make sure we find the correct record.
 					</div>
 				</label>
-				<input class="nhsuk-input nhsuk-u-width-one-half" id="reference-confirm" name="reference-number-confirm" type="text">
+
+				{% if formError %}
+				<span class="nhsuk-error-message" id="reference-error">
+					<span class="nhsuk-u-visually-hidden">Error:</span> Enter your reference number
+				</span>
+				{% endif %}
+
+				<input class="nhsuk-input nhsuk-u-width-one-half {% if formError %} nhsuk-input--error {% endif %}" id="reference-confirm" name="reference-number-confirm" type="text">
 			</div>
 			<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
 				Continue
