--- a/app/views/user-research-feb-2025/enter-postcode.html
+++ b/app/views/user-research-feb-2025/enter-postcode.html
@@ -12,11 +12,27 @@
 {% block content %}
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+
+		{% if formError %}
+		<div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+			<h2 class="nhsuk-error-summary__title" id="error-summary-title">
+				There is a problem
+			</h2>
+			<div class="nhsuk-error-summary__body">
+				<ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+					<li>
+						<a href="#postcode">Enter your postcode</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		{% endif %}
+
 		<span class="nhsuk-caption-m">Your details</span>
 
 		<form action="enter-postcode" method="post" class="form">
 
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 				<legend class="nhsuk-fieldset__legend nhsuk-label--l">
 					<h1 class="nhsuk-fieldset__heading" id="postcode-label">
 						Enter your postcode as shown on your letter
@@ -27,7 +43,13 @@
 					For example, WA4 1AB
 				</div>
 
-				<input class="nhsuk-input nhsuk-u-width-one-half" id="postcode" name="postcode" type="text" aria-labelledby="postcode-label">
+				{% if formError %}
+				<span class="nhsuk-error-message" id="postcode-error">
+					<span class="nhsuk-u-visually-hidden">Error:</span> Enter your postcode
+				</span>
+				{% endif %}
+
+				<input class="nhsuk-input nhsuk-u-width-one-half {% if formError %} nhsuk-input--error {% endif %}" id="postcode" name="postcode" type="text" aria-labelledby="postcode-label">
 			</div>
 
 			<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
