Furrther progress on cusom UR journey

--- a/app/views/user-research-feb-2025/cannot-find-your-details.html
+++ b/app/views/user-research-feb-2025/cannot-find-your-details.html
@@ -40,7 +40,7 @@
 					Postcode
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					{{ data['postcode'] | default('LS2 5ZN') }}
+					{{ data['postcode'] | default('LS2 5ZN') | upper }}
 				</dd>
 			</div>
       	</dl>
