--- a/app/views/user-research-feb-2025/direct-debit-what-is-your-address.html
+++ b/app/views/user-research-feb-2025/direct-debit-what-is-your-address.html
@@ -21,24 +21,49 @@ What is your address?
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+        {% if formError %}
+		<div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+			<h2 class="nhsuk-error-summary__title" id="error-summary-title">
+				There is a problem
+			</h2>
+			<div class="nhsuk-error-summary__body">
+				<ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+					<li>
+						<a href="#address-line-1">Enter your address</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		{% endif %}
+
 		<span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
 		<h1 class="nhsuk-heading-l">What is your address?</h1>
 
 		<p>This address will be updated on your record.</p>
       	
 		<form action="direct-debit-what-is-your-address" method="post" class="form">
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 				<label class="nhsuk-label" for="address-line-1">
 					Address line 1
 				</label>
-				<input class="nhsuk-input nhsuk-input--width-20" id="address-line-1" name="address-line-one" type="text">
+				{% if formError %}
+				<span class="nhsuk-error-message" id="address-error">
+					<span class="nhsuk-u-visually-hidden">Error:</span> Enter your address line 1
+				</span>
+				{% endif %}
+				<input class="nhsuk-input nhsuk-input--width-20 {% if formError %} nhsuk-input--error {% endif %}" id="address-line-1" name="address-line-one" type="text">
 			</div>
 
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 				<label class="nhsuk-label" for="address-line-2">
 					Address line 2
 				</label>
-				<input class="nhsuk-input nhsuk-input--width-20" id="address-line-2" name="address-line-two" type="text">
+				{% if formError %}
+				<span class="nhsuk-error-message" id="address-two-error">
+					<span class="nhsuk-u-visually-hidden">Error:</span> Enter your address line 2
+				</span>
+				{% endif %}
+				<input class="nhsuk-input nhsuk-input--width-20 {% if formError %} nhsuk-input--error {% endif %}" id="address-line-2" name="address-line-two" type="text">
 			</div>
 
 			<div class="nhsuk-form-group">
@@ -55,11 +80,16 @@ What is your address?
 				<input class="nhsuk-input nhsuk-input--width-20" id="address-line-4" name="address-line-four" type="text">
 			</div>
 
-			<div class="nhsuk-form-group">
+			<div class="nhsuk-form-group {% if formError %} nhsuk-form-group--error {% endif %}">
 				<label class="nhsuk-label" for="postcode">
 					Postcode
 				</label>
-				<input class="nhsuk-input nhsuk-input--width-10" id="postcode" name="postcode" type="text">
+				{% if formError %}
+				<span class="nhsuk-error-message" id="address-error">
+					<span class="nhsuk-u-visually-hidden">Error:</span> Enter your postcode
+				</span>
+				{% endif %}
+				<input class="nhsuk-input nhsuk-input--width-10 {% if formError %} nhsuk-input--error {% endif %}" id="postcode" name="postcode" type="text">
 			</div>
 
 			<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
