--- a/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
+++ b/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
@@ -80,7 +80,7 @@ Check your answers
       
 			<div class="nhsuk-summary-list__row">
 				<dt class="nhsuk-summary-list__key">
-					Following 11 payments
+					Following {{ data['instalment'] - 1 | default('12') }} payments
 				</dt>
 				<dd class="nhsuk-summary-list__value">
 					£4.82
