UR journey updated further / changed spelling mistake of Michelle placeholder name

--- a/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
+++ b/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
@@ -33,7 +33,7 @@ Check your answers
 				<dd class="nhsuk-summary-list__actions">
 
 					<a href="direct-debit-instalment-option">
-						Change<span class="nhsuk-u-visually-hidden"> instament option</span>
+						Change<span class="nhsuk-u-visually-hidden"> instalment option</span>
 					</a>
 				</dd>
 			</div>
