--- a/app/views/user-research-journies/enquiry-research-1/check-personal-details-ur.html
+++ b/app/views/user-research-journies/enquiry-research-1/check-personal-details-ur.html
@@ -60,7 +60,7 @@ They should match what was shown on your exemption or prepayment certificate, or
               Name
             </dt>
             <dd class="nhsuk-summary-list__value">
-              Michellle Doe
+              Michelle Doe
             </dd>
         
             <dd class="nhsuk-summary-list__actions">
