--- a/app/views/user-research-journies/enquiry-research-1/enquiry-letter-details-copy.html
+++ b/app/views/user-research-journies/enquiry-research-1/enquiry-letter-details-copy.html
@@ -67,7 +67,7 @@
             Name
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Michellle Doe
+            Michelle Doe
           </dd>
       
         </div>
