--- a/app/views/v1/challenge.html
+++ b/app/views/v1/challenge.html
@@ -72,7 +72,7 @@
         <table>
           <tbody><tr>
             <td><span class="strong">Name</span></td>
-            <td>Michellle Doe</td> 
+            <td>Michelle Doe</td> 
           </tr>
           <tr>
             <td><span class="strong">Address</span></td>
