--- a/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
+++ b/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
@@ -40,7 +40,7 @@ Enquiry Letter
             Name
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Michellle Doe
+            Michelle Doe
           </dd>
       
         </div>
