--- a/app/views/v6-pcn-decs/penalty-charge-notice-details-bsa.html
+++ b/app/views/v6-pcn-decs/penalty-charge-notice-details-bsa.html
@@ -220,7 +220,7 @@ Penalty Charge Notice
           Name
         </dt>
         <dd class="nhsuk-summary-list__value">
-          Michellle Doe
+          Michelle Doe
         </dd>
 
       </div>
