--- a/app/views/v6-pcn/view-your-active-dd-surcharge.html
+++ b/app/views/v6-pcn/view-your-active-dd-surcharge.html
@@ -119,7 +119,7 @@ Penalty Charge Notice details on hold
                     Name
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Michellle Doe
+                    Michelle Doe
                 </dd>
             </div>
 
