--- a/app/views/user-research-journies/enquiry-research-1/enquiry-letter-details.html
+++ b/app/views/user-research-journies/enquiry-research-1/enquiry-letter-details.html
@@ -65,7 +65,7 @@
             Name
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Michellle Doe
+            Michelle Doe
           </dd>
       
         </div>
