--- a/app/views/user-research-journies/pcn-research-1/penalty-charge-notice-details-bsa.html
+++ b/app/views/user-research-journies/pcn-research-1/penalty-charge-notice-details-bsa.html
@@ -250,7 +250,7 @@
           Name
         </dt>
         <dd class="nhsuk-summary-list__value">
-          Michellle Doe
+          Michelle Doe
         </dd>
 
       </div>
