--- a/app/views/v5-enquiry-decs/adhoc-screens/enquiry-letter-details-locked-decs.html
+++ b/app/views/v5-enquiry-decs/adhoc-screens/enquiry-letter-details-locked-decs.html
@@ -61,7 +61,7 @@
             Name
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Michellle Doe
+            Michelle Doe
           </dd>
       
         </div>
