--- a/app/views/v5/penalty-charge-notice-details.html
+++ b/app/views/v5/penalty-charge-notice-details.html
@@ -97,7 +97,7 @@
             Name
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Michellle Doe
+            Michelle Doe
           </dd>
       
         </div>
