--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-hc3.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-hc3.html
@@ -165,7 +165,7 @@ Penalty Charge Notice details HC3
 					Name
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					Michellle Doe
+					Michelle Doe
 				</dd>
 			</div>
 
