--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-notice.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-notice.html
@@ -116,7 +116,7 @@
                     Name
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Michellle Doe
+                    Michelle Doe
                 </dd>
             </div>
 
