--- a/app/views/v6-pcn-decs/view-your-active-dd-surcharge.html
+++ b/app/views/v6-pcn-decs/view-your-active-dd-surcharge.html
@@ -157,7 +157,7 @@ Penalty Charge Notice details on hold
 			Name
 			</dt>
 			<dd class="nhsuk-summary-list__value">
-			Michellle Doe
+			Michelle Doe
 			</dd>
 
 		</div>
