--- a/app/views/v6-pcn-decs/view-your-rejected-dd-surcharge.html
+++ b/app/views/v6-pcn-decs/view-your-rejected-dd-surcharge.html
@@ -163,7 +163,7 @@ Penalty Charge Notice details on hold
 					Name
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					Michellle Doe
+					Michelle Doe
 				</dd>
 			</div>
 
