--- a/app/views/v6-pcn/penalty-charge-details-DD-active.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-active.html
@@ -110,7 +110,7 @@ Penalty Charge Notice details on hold
 					Name
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					Michellle Doe
+					Michelle Doe
 				</dd>
 			</div>
 
