--- a/app/views/v6-pcn/penalty-charge-details-hc3-decs.html
+++ b/app/views/v6-pcn/penalty-charge-details-hc3-decs.html
@@ -266,7 +266,7 @@ Penalty Charge Notice details HC3
           Name
         </dt>
         <dd class="nhsuk-summary-list__value">
-          Michellle Doe
+          Michelle Doe
         </dd>
 
       </div>
