--- a/app/views/v6-pcn/penalty-charge-details-on-hold.html
+++ b/app/views/v6-pcn/penalty-charge-details-on-hold.html
@@ -226,7 +226,7 @@ Penalty Charge Notice details on hold
           Name
         </dt>
         <dd class="nhsuk-summary-list__value">
-          Michellle Doe
+          Michelle Doe
         </dd>
 
       </div>
