--- a/app/views/v6-pcn/surcharge-pcn-experimental.html
+++ b/app/views/v6-pcn/surcharge-pcn-experimental.html
@@ -92,7 +92,7 @@
                     Name
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Michellle Doe
+                    Michelle Doe
                 </dd>
             </div>
 
