--- a/app/views/v6-pcn/surcharge-penalty-charge-on-hold.html
+++ b/app/views/v6-pcn/surcharge-penalty-charge-on-hold.html
@@ -108,7 +108,7 @@
                     Name
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Michellle Doe
+                    Michelle Doe
                 </dd>
             </div>
 
